# dewet

./: .gitignore  Cargo.toml  README.md  dewet-project-plan.md
characters/: default.json
config/: dewet.example.toml  dewet.toml
crates/dewet-daemon/: Cargo.toml
crates/dewet-daemon/src/: lib.rs  main.rs
crates/dewet-daemon/src/ariaos/: mod.rs
crates/dewet-daemon/src/bridge/: messages.rs  mod.rs
crates/dewet-daemon/src/character/: mod.rs  spec.rs  state.rs
crates/dewet-daemon/src/config/: mod.rs
crates/dewet-daemon/src/director/: mod.rs
crates/dewet-daemon/src/llm/: lmstudio.rs  mod.rs  openrouter.rs
crates/dewet-daemon/src/observation/: mod.rs
crates/dewet-daemon/src/storage/: mod.rs  turso.rs
crates/dewet-daemon/src/tts/: mod.rs
crates/dewet-daemon/src/vision/: capture.rs  composite.rs  mod.rs
crates/dewet-debug/: Cargo.toml  tauri.conf.json
crates/dewet-debug/src/: daemon_client.rs  main.rs
debug-ui/: index.html  package-lock.json  package.json  vite.config.js
debug-ui/src/: main.js  style.css
docs/: ARCHITECTURE.md  PROTOCOLS.md
godot/: icon.svg.import  project.godot
godot/bridge/: DaemonBridge.gd  DaemonBridge.gd.uid
godot/chat/: ChatWindow.gd  ChatWindow.gd.uid
godot/main/: Dewet.gd  Dewet.gd.uid  Dewet.tscn  DragHandle.gd  DragHandle.gd.uid
godot/optical/: OpticalMemory.gd  OpticalMemory.gd.uid
godot/puppet/: PuppetController.gd  PuppetController.gd.uid
shared/schemas/: bridge_protocol.json  character_v2.json
xtask/: Cargo.toml
xtask/src/: main.rs
