[workspace]
members = [
    "crates/dewet-daemon",
    "crates/dewet-debug",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Chad"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"


