[package]
name = "dewet-debug"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Debug window for Dewet - introspection and control"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

